@@ -20,9 +20,21 @@
  */
 
 ## instantiate cached lists
+try {
 $directives =& $_SESSION['frontObj']->getDirectives();
 $modlist =& $_SESSION['frontObj']->getModList();
 $heyuconf =& $_SESSION['frontObj']->getHeyuConf();
+}
+catch(Exception $e) {
+	gen_error("Load Cache", $e->getMessage());
+	exit();
+}
+
+try {
 $heyusched =& $_SESSION['frontObj']->getHeyuSched();
+}
+catch(Exception $e) {
+	// noop
+}
 
 ?>
